# IdleGameEngine

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
docs/: api-reference.md  common-pitfalls.md  game-definition.md  getting-started.md  simulation.md
examples/: cookie_example.py
idleengine/: __init__.py  __main__.py  _types.py  cli.py  cost_scaling.py  currency.py  definition.py  effect.py  element.py  export.py  formatting.py  metrics.py  milestone.py  pacing.py  pipeline.py  prestige.py  report.py  requirement.py  runtime.py  simulation.py  state.py  strategy.py  subsystem.py  terminal.py  visualization.py
idleengine/mcp/: __init__.py  __main__.py  server.py
tests/: test_cookie_example.py  test_cost_scaling.py  test_effect.py  test_mcp_server.py  test_pacing.py  test_pipeline.py  test_requirement.py  test_runtime.py  test_simulation.py  test_state.py  test_types.py
