[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idleengine"
version = "0.1.0"
description = "Generic idle game engine with automated balance simulation"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
keywords = ["idle", "incremental", "game", "engine", "simulation", "pacing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "matplotlib>=3.7", "mcp>=1.0"]

[project.scripts]
idleengine = "idleengine.cli:main"

[tool.setuptools.packages.find]
include = ["idleengine*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
